<resources>
    <string name="app_name">meituan</string>
    <string name="shouye">首页</string>
    <string name="order">订单</string>
    <string name="my">我的</string>
    <string name="title">美团外卖</string>
    <string name="search">请输入商家 商品名</string>
    <string name="shoper">---附近的商家----</string>
    <string name="login">注册/登陆</string>
    <string name="zorder">综合排序</string>
    <string name="xorder">销量最高</string>
    <string name="morder">距离最近</string>
    <string name="shaixuan">筛选</string>
    <string name="zichan">我的资产</string>
    <string name="tuijian">我的推荐</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
