<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/frame_layout"
        android:layout_weight="9"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:id="@+id/radiogroup"
        >
        <RadioButton
            android:id="@+id/homepage"
            android:text="@string/shouye"
            style="@style/FirstRadio"
            android:checked="true"
            android:drawableTop="@drawable/first"
            />
        <RadioButton
            android:id="@+id/order"
            android:text="@string/order"
            style="@style/FirstRadio"
            android:drawableTop="@drawable/two"
            />
        <RadioButton
            android:id="@+id/my"
            android:text="@string/my"
            style="@style/FirstRadio"
            android:drawableTop="@drawable/three"
            />
    </RadioGroup>
</LinearLayout>
