<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/shop_pull"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/address"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <EditText
                        android:id="@+id/iv_address"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="@null" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/search"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/a_4" />

                    <EditText
                        android:id="@+id/iv_content"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/search" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/myrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/shoper"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/zorder"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/xorder"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/morder"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/shaixuan"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/shoplist"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</LinearLayout>
