<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:id="@+id/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/show_title"
            android:layout_centerHorizontal="true"
            android:text="****"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/zorder"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/xorder"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/morder"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/shaixuan"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pull_listview"
        >
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/show_recycle"
            ></android.support.v7.widget.RecyclerView>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
</LinearLayout>
