<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:id="@+id/finsh"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="#000"
            />
    </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      >
    <com.example.meituan.MyModule.ViewHeader
        android:id="@+id/eadehr"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        android:layout_marginLeft="40dp"
        />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_centerVertical="true"
          android:text="@string/login"
          android:textColor="@color/black"
          android:textSize="30sp"
          android:id="@+id/login"
          />
  </RelativeLayout>
<com.example.meituan.MyModule.Squar
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_recycler"
        >
    </android.support.v7.widget.RecyclerView>
    <com.example.meituan.MyModule.Squar
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zichan"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/two_recycler"
        >
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuijian"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/three_recycler"
        >
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
